fixed nav spacing and added favicon

--- a/material/assets/stylesheets/styles.css
+++ b/material/assets/stylesheets/styles.css
@@ -1584,7 +1584,7 @@ kbd {
 	text-transform: lowercase;
 	letter-spacing: 2px;
 	line-height: 1.5;
-	margin: 0px 0px 5px 73px;
+	margin: 0px 0px 5px 0px;
 	padding: 0px 0px 2px 0px;
 	white-space: normal;
 	overflow: hidden;
@@ -1616,7 +1616,7 @@ kbd {
 
 .drawer .section {
 	display: block;
-	padding: 14.5px 24px;
+	padding: 14.5px 0px;
 }
 
 .drawer .scrollable {
@@ -1646,7 +1646,7 @@ strong {
 
 .drawer .scrollable .wrapper {
 	height: auto;
-	padding-right: 40px;
+	padding-left: 67px;
 	min-height: 100%;
 	/*
        * Add spacing at top and bottom of separator
@@ -1711,8 +1711,8 @@ strong {
 
 .project .logo img {
 	display: block;
-	width: 100%;
-	height: 100%;
+	width: 190px;
+	height: auto;
 }
 
 .project .name {
